tests/ui/block-result/block-must-not-have-result-res.stderr
error[E0308]: mismatched types
  --> $DIR/block-must-not-have-result-res.rs:5:9
   |
LL |     fn drop(&mut self) {
   |                       - expected `()` because of default return type
LL |         true
   |         ^^^^ expected `()`, found `bool`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0308`.
